fixed layout issue

--- a/frontend/src/Login.css
+++ b/frontend/src/Login.css
@@ -20,6 +20,7 @@ body.main-page,
 body.register-page {
   background-color: var(--bodybg);
   font-family: "Raleway", sans-serif;
+  overflow-y: hidden;
 }
 .login-container {
   display: flex;
